[package]
name = "iodine_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
bincode = "1.3.3"
bitfield = "0.14.0"
data-encoding = "2.3.3"
exitcode = "1.1.2"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.39"
tokio = { version = "1.26.0", features = ["full"] }
trust-dns-client = "0.22.0"
tun = "0.5.5"
