[package]
name = "iodine_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
bincode = "1.3.3"
bytes = "1.4.0"
bitfield = "0.14.0"
data-encoding = "2.3.3"
exitcode = "1.1.2"
# zlib or zlib-ng is **required**
# default backend miniz_oxide produces slightly different compression than the C lib used by iodined
flate2 = { version = "1.0.25", features = ["zlib-ng"], default-features = false }
md-5 = "0.10.5"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.39"
tokio = { version = "1.26.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tun = { version = "0.5.5", features = ["async"] }
